--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,23 +7,17 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from nbdev.export import notebook2script\n",
+    "from FireHR.cli import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# A Practical Method for High-Resolution Burned Areas Monitoring using Sentinel-2 and VIIRS \n",
     "\n",
-    "> Summary description here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "> [placeholder]"
    ]
   },
   {
@@ -37,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install FireHR`"
    ]
   },
   {
@@ -51,7 +45,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Command line utility to run FireHR for an event as outputed by BA-Net post-processing:\n",
+    "```bash\n",
+    "firehr_from_banet_events ba100m_PT2020_218.tif\n",
+    "```"
    ]
   },
   {
@@ -60,26 +57,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted 01_data.ipynb.\n",
+      "Converted 02_models.ipynb.\n",
+      "Converted 04_predict.ipynb.\n",
+      "Converted 05_cli.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
     }
    ],
    "source": [
-    "1+1"
+    "#hide\n",
+    "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
