--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -323,14 +323,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 449 ms, sys: 44.8 ms, total: 493 ms\n",
-      "Wall time: 4.84 s\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "((892, 881, 7),\n",
@@ -345,7 +337,7 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "#local\n",
     "im, transform, crs = get_event_data('temp', 2020, 'temp/banet100m.tif')\n",
     "im.shape, transform, crs"
    ]
@@ -359,12 +351,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 00_core.ipynb.\n",
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
       "Converted 04_predict.ipynb.\n",
       "Converted 05_cli.ipynb.\n",
-      "Converted Untitled.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -373,13 +363,6 @@
     "#hide \n",
     "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
