--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -171,6 +171,7 @@
     }
    ],
    "source": [
+    "#local\n",
     "model = load_pretrained_model()\n",
     "model.conv[0].weight.device, model.conv[0].weight.type()"
    ]
@@ -184,12 +185,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 00_core.ipynb.\n",
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
       "Converted 04_predict.ipynb.\n",
       "Converted 05_cli.ipynb.\n",
-      "Converted Untitled.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
