--- a/nbs/04_predict.ipynb
+++ b/nbs/04_predict.ipynb
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "#local\n",
     "im, transform, crs = get_event_data('temp', 2020, 'temp/banet100m.tif')\n",
     "preds = get_preds(im)\n",
     "plt.imshow(preds);"
