added use_least_cloudy and max_cloud_fraction options

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -43,6 +43,7 @@
     "import zipfile\n",
     "from IPython.core.debugger import set_trace\n",
     "from pathlib import Path\n",
+    "import warnings\n",
     "from banet.geo import open_tif, merge, Region\n",
     "from banet.geo import downsample"
    ]
@@ -164,7 +165,22 @@
     "        image_collection = image_collection.select(bands)\n",
     "    return image_collection\n",
     "\n",
-    "def download_data(R:RegionST, times, products, bands, path_save, scale=10):\n",
+    "def filter_cloudy(image_collection:ee.ImageCollection, max_cloud_fraction=0.2):\n",
+    "    return image_collection.filterMetadata(\n",
+    "        'CLOUDY_PIXEL_PERCENTAGE', 'not_greater_than', max_cloud_fraction)\n",
+    "\n",
+    "def n_least_cloudy(image_collection:ee.ImageCollection, n=5):\n",
+    "    image_collection = image_collection.sort(prop='CLOUDY_PIXEL_PERCENTAGE')\n",
+    "    image_collection = image_collection.toList(image_collection.size())\n",
+    "    colsize = image_collection.size().getInfo()\n",
+    "    if colsize < n: \n",
+    "        warnings.warn(f'Total number of images in the collection {colsize} less than n={n}. Setting n={colsize}')\n",
+    "        n = colsize\n",
+    "    image_collection = ee.ImageCollection([ee.Image(image_collection.get(i)) for i in range(n)])\n",
+    "    return image_collection\n",
+    "\n",
+    "def download_data(R:RegionST, times, products, bands, path_save, scale=10, max_cloud_fraction=None,\n",
+    "                  use_least_cloudy=None):\n",
     "    ee.Initialize()\n",
     "    path_save.mkdir(exist_ok=True, parents=True)\n",
     "    if not ((path_save/f'download.{bands[0]}.tif').is_file() and \n",
@@ -184,9 +200,17 @@
     "                imCol = ee.ImageCollection(products[0])\n",
     "                for i in range(1, len(products)):\n",
     "                    imCol = imCol.merge(ee.ImageCollection(products[i]))\n",
-    "                im = filter_region(imCol, R, times=times, bands=bands).median()\n",
+    "                imCol = filter_region(imCol, R, times=times, bands=bands)\n",
+    "                if max_cloud_fraction is not None:\n",
+    "                    imCol = filter_cloudy(imCol, max_cloud_fraction=max_cloud_fraction)\n",
+    "                if use_least_cloudy is not None:\n",
+    "                    imCol = n_least_cloudy(imCol, n=use_least_cloudy)\n",
+    "                im = imCol.median()\n",
     "                imCol = ee.ImageCollection([im])\n",
     "                colList = imCol.toList(imCol.size())\n",
+    "                # info = colList.getInfo()\n",
+    "                # data_times = [pd.to_datetime(o['properties']['system:time_start'], unit='ms') for o in info]\n",
+    "                # data_cloudy = [o['properties']['CLOUDY_PIXEL_PERCENTAGE'] for o in info]\n",
     "                # Download each image\n",
     "                for i in range(colList.size().getInfo()):\n",
     "                    image = ee.Image(colList.get(i))\n",
@@ -257,25 +281,121 @@
     "                    if f'{r}_{i}' in files] for r in ref] \n",
     "        for fs in file_groups:\n",
     "            fsave = '_'.join(fs[0].stem.split('_')[:-1]) + suffix\n",
-    "            merge_tifs(fs, fsave, delete=True)"
+    "            merge_tifs(fs, fsave, delete=True)\n",
+    "            \n",
+    "def download_data_ts(R:RegionST, products, bands, path_save, scale=10):\n",
+    "    ee.Initialize()\n",
+    "    times = (R.times[0], R.times[-1])\n",
+    "    path_save.mkdir(exist_ok=True, parents=True)\n",
+    "    sR = [R] if R.shape[0] <= 32 else split_region(R, size=32, cls=RegionST)\n",
+    "    for j, R in enumerate(sR):\n",
+    "        region = (f\"[[{R.bbox.left}, {R.bbox.bottom}], [{R.bbox.right}, {R.bbox.bottom}], \" +\n",
+    "                   f\"[{R.bbox.right}, {R.bbox.top}], [{R.bbox.left}, {R.bbox.top}]]\")\n",
+    "\n",
+    "        # Merge products to single image collection\n",
+    "        imCol = ee.ImageCollection(products[0])\n",
+    "        for i in range(1, len(products)):\n",
+    "            imCol = imCol.merge(ee.ImageCollection(products[i]))\n",
+    "        imCol = filter_region(imCol, R, times=times, bands=bands)\n",
+    "        imCol = ee.ImageCollection(imCol)\n",
+    "        colList = imCol.toList(imCol.size())\n",
+    "\n",
+    "        # Download each image\n",
+    "        for i in range(colList.size().getInfo()):\n",
+    "            image = ee.Image(colList.get(i))\n",
+    "            zip_error = True\n",
+    "            for i in range(10): # Try 10 times\n",
+    "                if zip_error:\n",
+    "                    try:\n",
+    "                        url = image.getDownloadURL(\n",
+    "                            {'scale': scale, 'crs': 'EPSG:4326', \n",
+    "                             'region': f'{region}'})\n",
+    "                        r = requests.get(url)\n",
+    "                        with open(str(path_save/'data.zip'), 'wb') as f:\n",
+    "                            f.write(r.content)\n",
+    "                        with zipfile.ZipFile(str(path_save/'data.zip'), 'r') as f:\n",
+    "                            files = f.namelist()\n",
+    "                            f.extractall(str(path_save))\n",
+    "                        os.remove(str(path_save/'data.zip'))\n",
+    "                        zip_error = False\n",
+    "                    except:\n",
+    "                        zip_error = True\n",
+    "                        os.remove(str(path_save/'data.zip'))\n",
+    "                        time.sleep(10)\n",
+    "            if zip_error: raise Exception(f'Failed to process {url}')\n",
+    "            for f in files:\n",
+    "                f = path_save/f\n",
+    "                os.rename(str(f), str(path_save/f'{f.stem}_{j}{f.suffix}'))\n",
+    "                \n",
+    "    # Merge files\n",
+    "    suffix = '.tif'\n",
+    "    files = path_save.ls(include=[suffix])\n",
+    "    files = [o.stem for o in files]\n",
+    "    ref = np.unique(['_'.join(o.split('_')[:-1]) \n",
+    "                     for o in files if len(o.split('_')[-1]) < 6])\n",
+    "    ids = np.unique([int(o.split('_')[-1]) \n",
+    "                     for o in files if len(o.split('_')[-1]) < 6])\n",
+    "    file_groups = [[path_save/f'{r}_{i}{suffix}' for i in ids \n",
+    "                if f'{r}_{i}' in files] for r in ref] \n",
+    "    for fs in file_groups:\n",
+    "        if len(fs) < 500:\n",
+    "            fsave = '_'.join(fs[0].stem.split('_')[:-1]) + suffix\n",
+    "            merge_tifs(fs, fsave, delete=True)\n",
+    "        else:\n",
+    "            fs_break = np.array(fs)[:(len(fs)//500)*500].reshape(len(fs)//500,-1).tolist()\n",
+    "            if len(fs[(len(fs)//500)*500:]) > 0:\n",
+    "                fs_break.append(fs[(len(fs)//500)*500:])\n",
+    "            for fsi, fs2 in enumerate(fs_break):\n",
+    "                fsave = '_'.join(fs2[0].stem.split('_')[:-1]) + f'_break{fsi}' + suffix\n",
+    "                merge_tifs(fs2, fsave, delete=True)\n",
+    "\n",
+    "    files = path_save.ls(include=[suffix, '_break'])\n",
+    "    files = [o.stem for o in files]\n",
+    "    ref = np.unique(['_'.join(o.split('_')[:-1]) \n",
+    "                     for o in files if len(o.split('_')[-1]) < 11])\n",
+    "    ids = np.unique([o.split('_')[-1]\n",
+    "                     for o in files if len(o.split('_')[-1]) < 11])\n",
+    "    file_groups = [[path_save/f'{r}_{i}{suffix}' for i in ids \n",
+    "                if f'{r}_{i}' in files] for r in ref] \n",
+    "    for fs in file_groups:\n",
+    "        fsave = '_'.join(fs[0].stem.split('_')[:-1]) + suffix\n",
+    "        merge_tifs(fs, fsave, delete=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download data for any region example:\n",
+    "Download median composite for any region example:\n",
     "```python\n",
-    "R = RegionST('test_region', [-9.0,39.95,-8.9,40.05], 0.001, time_start='2020-07-01', time_end='2020-07-15')\n",
+    "R = RegionST('test_region10', [-8.0,39.95,-7.9,40.05], 0.001, \n",
+    "             time_start='2020-07-01', time_end='2020-07-15')\n",
     "R.time_margin=1\n",
     "products = [\"COPERNICUS/S2\"]\n",
     "bands = ['B4', 'B8', 'B12']\n",
     "path  = Path('temp')\n",
-    "before = (R.times[0]-pd.Timedelta(days=60), R.times[0])\n",
-    "after  = (R.times[-1], R.times[-1]+pd.Timedelta(days=60))\n",
+    "before = (R.times[0]-pd.Timedelta(days=120), R.times[0])\n",
+    "after  = (R.times[-1], R.times[-1]+pd.Timedelta(days=120))\n",
     "for mode, time_window in zip(['before', 'after'], [before, after]):\n",
     "    path_save = path/R.name/mode\n",
-    "    download_data(R, time_window, products, bands, path_save)\n",
+    "    download_data(R, time_window, products, bands, path_save, \n",
+    "                  use_least_cloudy=5)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download median composite for any region example:\n",
+    "```python\n",
+    "R = RegionST('test_region', [-8.0,39.95,-7.9,40.05], 0.001, \n",
+    "             time_start='2020-07-01', time_end='2020-08-31')\n",
+    "R.time_margin=0\n",
+    "products = [\"COPERNICUS/S2\"]\n",
+    "bands = ['B4', 'B8', 'B12']\n",
+    "path_save  = Path('temp')/R.name\n",
+    "download_data_ts(R, products, bands, path_save)\n",
     "```"
    ]
   },
@@ -287,20 +407,27 @@
    "source": [
     "#export\n",
     "def get_event_data(event_id, year, coarse_mask_file, path=Path('.'), \n",
-    "                   coarse_mask_doy_layer=1, products=['COPERNICUS/S2'], \n",
-    "                   bands=['B4', 'B8', 'B12'], scale_factor=1e-4, composite_days=[60,60]):\n",
+    "                   coarse_mask_doy_layer=2, products=['COPERNICUS/S2'], \n",
+    "                   bands=['B4', 'B8', 'B12'], scale_factor=1e-4, composite_days=[60,60],\n",
+    "                   max_cloud_fraction=None, use_least_cloudy=None):\n",
     "    rst_ba100 = open_tif(coarse_mask_file)\n",
-    "    doy_start = rst_ba100.read(coarse_mask_doy_layer).min()\n",
-    "    doy_end   = rst_ba100.read(coarse_mask_doy_layer).max()\n",
+    "    doys = rst_ba100.read(coarse_mask_doy_layer).astype(np.float16)\n",
+    "    doys[doys==0] = np.nan\n",
+    "    doy_start, doy_end = np.nanmin(doys), np.nanmax(doys)\n",
+    "    del doys\n",
     "    time_start = pd.Timestamp(f'{year}-01-01') + pd.Timedelta(days=doy_start-1)\n",
     "    time_end   = pd.Timestamp(f'{year}-01-01') + pd.Timedelta(days=doy_end-1)\n",
+    "    print('Event time_start:', str(time_start))\n",
+    "    print('Event time_end:', str(time_end))\n",
     "    R = RegionST(event_id, list(rst_ba100.bounds), rst_ba100.transform[0], \n",
     "                 time_start=time_start, time_end=time_end, time_margin=1)\n",
     "    before = (R.times[0]-pd.Timedelta(days=composite_days[0]), R.times[0])\n",
     "    after  = (R.times[-1], R.times[-1]+pd.Timedelta(days=composite_days[1]))\n",
     "    for mode, time_window in zip(['before', 'after'], [before, after]):\n",
     "        path_save = path/R.name/mode\n",
-    "        download_data(R, time_window, products, bands, path_save)\n",
+    "        print('Downloading GEE median composite for:', ' to '.join([str(o) for o in time_window]))\n",
+    "        download_data(R, time_window, products, bands, path_save, \n",
+    "                      max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy)\n",
     "\n",
     "    rst_ba100 = rst_ba100.read(coarse_mask_doy_layer)\n",
     "    s10before_files = np.array((path/R.name/'before').ls(exclude=['.xml']))[[1,2,0]].tolist()\n",
@@ -322,6 +449,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event time_start: 2020-05-06 00:00:00\n",
+      "Event time_end: 2020-09-11 00:00:00\n",
+      "Downloading GEE median composite for: 2020-03-06 00:00:00 to 2020-05-05 00:00:00\n",
+      "Downloading GEE median composite for: 2020-09-12 00:00:00 to 2020-11-11 00:00:00\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
