--- a/nbs/05_cli.ipynb
+++ b/nbs/05_cli.ipynb
@@ -55,13 +55,16 @@
     "        file:Param(\"BA-Net event tif file\",str), \n",
     "        path:Param(\"Path to save outputs\",str)='.',\n",
     "        composite_days_before:Param(\"Time window for composite before fire\",int)=120,\n",
-    "        composite_days_after:Param(\"Time window for composite after fire\",int)=60):\n",
+    "        composite_days_after:Param(\"Time window for composite after fire\",int)=120,\n",
+    "        max_cloud_fraction:Param(\"Maximum fraction of cloud pixels\",float)=None,\n",
+    "        use_least_cloudy:Param(\"Number of least cloudy images to use\",int)=None):\n",
     "    path = Path(path)\n",
     "    event_id = '_'.join(Path(file).stem.split('_')[1:])\n",
-    "    year = int(re.findall('(\\d{4})', Path('PT2020_233/ba100m_PT2020_233.tif').stem.split('_')[1])[0])\n",
+    "    year = int(re.findall('(\\d{4})', Path(file).stem.split('_')[1])[0])\n",
     "    im, transform, crs = get_event_data(\n",
-    "        event_id, year, file, composite_days=[composite_days_before,composite_days_after])\n",
-    "    preds = get_preds(im)\n",
+    "        event_id, year, file, composite_days=[composite_days_before,composite_days_after],\n",
+    "        max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy)\n",
+    "    preds = get_preds(im, gpu=False)\n",
     "    save_data(path/f'firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)"
    ]
   },
@@ -74,12 +77,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 00_core.ipynb.\n",
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
       "Converted 04_predict.ipynb.\n",
       "Converted 05_cli.ipynb.\n",
-      "Converted Untitled.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
