--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -48,6 +48,21 @@
     "Command line utility to run FireHR for an event as outputed by BA-Net post-processing:\n",
     "```bash\n",
     "firehr_from_banet_events ba100m_PT2020_218.tif\n",
+    "```\n",
+    "\n",
+    "Optional arguments:\n",
+    "\n",
+    "|Argument|default|type|description|\n",
+    "|---|---|---|---|\n",
+    "|path| '.' | str |Path to save the outputs.|\n",
+    "|composite_days_before| 120 |int| Time window size in days for the pre-fire data |\n",
+    "|composite_days_after| 120 |int| Time window size in days for the post-fire data |\n",
+    "|max_cloud_fraction| None |float (0.0-1.0)| Remove images with a cloud fraction higher than specified |\n",
+    "|use_least_cloudy | None |int| Select the n least cloudy images in the time_window |\n",
+    "\n",
+    "Example using `use_least_cloudy` parameter:\n",
+    "```bash\n",
+    "firehr_from_banet_events ba100m_PT2020_218.tif --use_least_cloudy 5\n",
     "```"
    ]
   },
@@ -60,7 +75,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 00_core.ipynb.\n",
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
       "Converted 04_predict.ipynb.\n",
