--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Command line utility to run FireHR for an event as outputed by BA-Net post-processing:\n",
+    "### Command line utility to run FireHR for an event as outputed by BA-Net post-processing\n",
     "```bash\n",
     "firehr_from_banet_events ba100m_PT2020_218.tif\n",
     "```\n",
