added option to download topography map

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -179,6 +179,29 @@
     "    image_collection = ee.ImageCollection([ee.Image(image_collection.get(i)) for i in range(n)])\n",
     "    return image_collection\n",
     "\n",
+    "def download_topography_data(R:RegionST, path_save=Path('.'), scale=10):\n",
+    "    ee.Initialize()\n",
+    "    image = ee.Image('srtm90_v4')\n",
+    "    path_save.mkdir(exist_ok=True, parents=True)\n",
+    "    sR = [R] if R.shape[0] <= 64 else split_region(R, size=64)\n",
+    "    if not (path_save/'srtm90_v4.elevation.tif').is_file():\n",
+    "        files = []\n",
+    "        for j, R in enumerate(sR):\n",
+    "            region = (f\"[[{R.bbox.left}, {R.bbox.bottom}], [{R.bbox.right}, {R.bbox.bottom}], \" +\n",
+    "              f\"[{R.bbox.right}, {R.bbox.top}], [{R.bbox.left}, {R.bbox.top}]]\")\n",
+    "            url = image.getDownloadUrl(\n",
+    "                {'scale': scale, 'crs': 'EPSG:4326', 'region': f'{region}'})\n",
+    "            r = requests.get(url)\n",
+    "            with open(str(path_save/'data.zip'), 'wb') as f:\n",
+    "                f.write(r.content)\n",
+    "            with zipfile.ZipFile(str(path_save/'data.zip'), 'r') as f:\n",
+    "                f.extractall(str(path_save))\n",
+    "                os.rename(str(path_save/'srtm90_v4.elevation.tif'),\n",
+    "                          str(path_save/f'srtm90_v4.elevation_{j}.tif'))\n",
+    "                files.append(str(path_save/f'srtm90_v4.elevation_{j}.tif'))\n",
+    "            os.remove(str(path_save/'data.zip'))\n",
+    "        merge_tifs(files, 'srtm90_v4.elevation.tif', delete=True)\n",
+    "\n",
     "def download_data(R:RegionST, times, products, bands, path_save, scale=10, max_cloud_fraction=None,\n",
     "                  use_least_cloudy=None):\n",
     "    ee.Initialize()\n",
@@ -409,7 +432,8 @@
     "def get_event_data(event_id, year, coarse_mask_file, path=Path('.'), \n",
     "                   coarse_mask_doy_layer=2, products=['COPERNICUS/S2'], \n",
     "                   bands=['B4', 'B8', 'B12'], scale_factor=1e-4, composite_days=[60,60],\n",
-    "                   max_cloud_fraction=None, use_least_cloudy=None):\n",
+    "                   max_cloud_fraction=None, use_least_cloudy=None, scale=10,\n",
+    "                   topography=False):\n",
     "    rst_ba100 = open_tif(coarse_mask_file)\n",
     "    doys = rst_ba100.read(coarse_mask_doy_layer).astype(np.float16)\n",
     "    doys[doys==0] = np.nan\n",
@@ -427,7 +451,11 @@
     "        path_save = path/R.name/mode\n",
     "        print('Downloading GEE median composite for:', ' to '.join([str(o) for o in time_window]))\n",
     "        download_data(R, time_window, products, bands, path_save, \n",
-    "                      max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy)\n",
+    "                      max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy,\n",
+    "                      scale=scale)\n",
+    "    if topography:\n",
+    "        print('Downloading topography data.')\n",
+    "        download_topography_data(R, path/R.name, scale=scale)\n",
     "\n",
     "    rst_ba100 = rst_ba100.read(coarse_mask_doy_layer)\n",
     "    s10before_files = np.array((path/R.name/'before').ls(exclude=['.xml']))[[1,2,0]].tolist()\n",
@@ -456,7 +484,8 @@
       "Event time_start: 2020-05-06 00:00:00\n",
       "Event time_end: 2020-09-11 00:00:00\n",
       "Downloading GEE median composite for: 2020-03-06 00:00:00 to 2020-05-05 00:00:00\n",
-      "Downloading GEE median composite for: 2020-09-12 00:00:00 to 2020-11-11 00:00:00\n"
+      "Downloading GEE median composite for: 2020-09-12 00:00:00 to 2020-11-11 00:00:00\n",
+      "Downloading topography data.\n"
      ]
     },
     {
@@ -475,7 +504,7 @@
    ],
    "source": [
     "#local\n",
-    "im, transform, crs = get_event_data('temp', 2020, 'temp/banet100m.tif')\n",
+    "im, transform, crs = get_event_data('temp', 2020, 'temp/banet100m.tif', topography=True)\n",
     "im.shape, transform, crs"
    ]
   },
