add topography option to cli and fix paths

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -455,7 +455,7 @@
     "                      scale=scale)\n",
     "    if topography:\n",
     "        print('Downloading topography data.')\n",
-    "        download_topography_data(R, path/R.name, scale=scale)\n",
+    "        download_topography_data(R, path/event_id/'topography', scale=scale)\n",
     "\n",
     "    rst_ba100 = rst_ba100.read(coarse_mask_doy_layer)\n",
     "    s10before_files = np.array((path/R.name/'before').ls(exclude=['.xml']))[[1,2,0]].tolist()\n",
