--- a/nbs/05_cli.ipynb
+++ b/nbs/05_cli.ipynb
@@ -57,15 +57,20 @@
     "        composite_days_before:Param(\"Time window for composite before fire\",int)=120,\n",
     "        composite_days_after:Param(\"Time window for composite after fire\",int)=120,\n",
     "        max_cloud_fraction:Param(\"Maximum fraction of cloud pixels\",float)=None,\n",
-    "        use_least_cloudy:Param(\"Number of least cloudy images to use\",int)=None):\n",
+    "        use_least_cloudy:Param(\"Number of least cloudy images to use\",int)=None,\n",
+    "        topography:Param(\"Download also topography for the event region\",bool)=False,\n",
+    "        skip_preds:Param(\"Skip computation of high resolution burned area\", bool)=False):\n",
     "    path = Path(path)\n",
     "    path.mkdir(exist_ok=True, parents=True)\n",
     "    event_id = '_'.join(Path(file).stem.split('_')[1:])\n",
     "    year = int(re.findall('(\\d{4})', Path(file).stem.split('_')[1])[0])\n",
+    "    if topography in [True, 'true', 'True', 'TRUE']: topography = True\n",
     "    im, transform, crs = get_event_data(\n",
     "        event_id, year, file, composite_days=[composite_days_before,composite_days_after],\n",
-    "        max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy, path=path)\n",
-    "    preds = get_preds(im, gpu=False)\n",
+    "        max_cloud_fraction=max_cloud_fraction, use_least_cloudy=use_least_cloudy, path=path,\n",
+    "        topography=topography)\n",
+    "    if not skip_preds:\n",
+    "        preds = get_preds(im, gpu=False)\n",
     "    save_data(path/f'{event_id}/firehr_{event_id}.tif', (preds*255).astype(np.uint8), crs=crs, transform=transform)"
    ]
   },
