--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -41,6 +41,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import zipfile\n",
+    "import json\n",
     "from IPython.core.debugger import set_trace\n",
     "from pathlib import Path\n",
     "import warnings\n",
