add model weights and update docs

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -392,7 +392,7 @@
    "source": [
     "Download median composite for any region example:\n",
     "```python\n",
-    "R = RegionST('test_region10', [-8.0,39.95,-7.9,40.05], 0.001, \n",
+    "R = RegionST('test_region1', [-8.0,39.95,-7.9,40.05], 0.001, \n",
     "             time_start='2020-07-01', time_end='2020-07-15')\n",
     "R.time_margin=1\n",
     "products = [\"COPERNICUS/S2\"]\n",
@@ -411,9 +411,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download median composite for any region example:\n",
+    "Download all data for any region example:\n",
     "```python\n",
-    "R = RegionST('test_region', [-8.0,39.95,-7.9,40.05], 0.001, \n",
+    "R = RegionST('test_region2', [-8.0,39.95,-7.9,40.05], 0.001, \n",
     "             time_start='2020-07-01', time_end='2020-08-31')\n",
     "R.time_margin=0\n",
     "products = [\"COPERNICUS/S2\"]\n",
