--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -35,8 +35,9 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "import os\n",
-    "from fastai.vision.all import *"
+    "import os, sys\n",
+    "from fastai.vision.all import *\n",
+    "import FireHR"
    ]
   },
   {
@@ -140,7 +141,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "_WEIGHTS = os.path.expanduser('~/.firehr/') + 'model512.pth'\n",
+    "_WEIGHTS = sys.modules[FireHR.__name__].__path__[0] + '/data/model512.pth'\n",
     "def load_pretrained_model(weights=_WEIGHTS, ni=6, nc=1, half_precision=True, gpu=True):\n",
     "    model = FireHR(ni,nc)\n",
     "    st = torch.load(weights, map_location=torch.device('cpu'))\n",
@@ -187,8 +188,8 @@
      "text": [
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
-      "Converted 04_predict.ipynb.\n",
-      "Converted 05_cli.ipynb.\n",
+      "Converted 03_predict.ipynb.\n",
+      "Converted 04_cli.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -197,6 +198,13 @@
     "#hide\n",
     "notebook2script()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
