delete old files, update docs, version 1.0

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "## Install using pip"
    ]
   },
   {
@@ -38,6 +38,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Install from repo\n",
+    "```bash\n",
+    "git clone https://github.com/mnpinto/FireHR\n",
+    "cd FireHR; pip install -e .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to use"
    ]
   },
@@ -45,7 +56,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Command line utility to run FireHR for an event as outputed by BA-Net post-processing\n",
+    "#### Configuration of Google Earth Engine API\n",
+    "Run the following python code and follow the link to generate the authentication file:\n",
+    "```python\n",
+    "import ee\n",
+    "ee.Authenticate()\n",
+    "```\n",
+    "Once you are done you should see the message `Successfully saved authorization token.` and the file `~/.config/earthengine/credentials` should exist. \n",
+    "\n",
+    "Please refer to https://developers.google.com/earth-engine/guides/python_install for more information about the GEE Python API. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Command line utility to run FireHR for an event as outputed by BA-Net post-processing\n",
     "```bash\n",
     "firehr_from_banet_events ba100m_PT2020_218.tif\n",
     "```\n",
