updated download code, added optional scale_meters parameter to RegionST

--- a/nbs/01_data.ipynb
+++ b/nbs/01_data.ipynb
@@ -45,6 +45,7 @@
     "from IPython.core.debugger import set_trace\n",
     "from pathlib import Path\n",
     "import warnings\n",
+    "from fastprogress.fastprogress import progress_bar\n",
     "from banet.geo import open_tif, merge, Region\n",
     "from banet.geo import downsample"
    ]
@@ -56,25 +57,33 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "class Region(Region):\n",
-    "    @property\n",
-    "    def transform(self):\n",
-    "        \"Rasterio Affine transform of the region\"\n",
-    "        return rasterio.transform.from_origin(self.bbox[0], self.bbox[-1], \n",
-    "                                              self.pixel_size, self.pixel_size)\n",
-    "    \n",
     "class RegionST(Region):\n",
     "    \"Defines a region in space and time with a name, a bounding box and the pixel size.\"\n",
-    "    def __init__(self, name:str, bbox:list, pixel_size:float, time_start:str=None,\n",
-    "                 time_end:str=None, time_freq:str='D', time_margin:int=0):\n",
+    "    def __init__(self, name:str, bbox:list, pixel_size:float=None, scale_meters:int=None,\n",
+    "                 time_start:str=None, time_end:str=None, time_freq:str='D', time_margin:int=0,\n",
+    "                 shape:tuple=None):\n",
+    "        if scale_meters is not None and pixel_size is not None: \n",
+    "            raise Exception('Either pixel_size or scale_meters must be set to None.')\n",
     "        self.name = name\n",
     "        self.bbox = rasterio.coords.BoundingBox(*bbox) # left, bottom, right, top\n",
-    "        self.pixel_size = pixel_size\n",
-    "        self.time_start = pd.Timestamp(str(time_start))\n",
-    "        self.time_end = pd.Timestamp(str(time_end))\n",
-    "        self.time_margin = time_margin\n",
-    "        self.time_freq = time_freq\n",
+    "        if pixel_size is not None:\n",
+    "            self.pixel_size = pixel_size\n",
+    "        else:\n",
+    "            self.pixel_size = scale_meters/111000\n",
+    "        self.scale_meters = scale_meters\n",
+    "        self._shape       = shape\n",
+    "        self.time_start   = pd.Timestamp(str(time_start))\n",
+    "        self.time_end     = pd.Timestamp(str(time_end))\n",
+    "        self.time_margin  = time_margin\n",
+    "        self.time_freq    = time_freq\n",
     "\n",
+    "    @property\n",
+    "    def shape(self):\n",
+    "        \"Shape of the region (height, width)\"\n",
+    "        if self._shape is None:\n",
+    "            return (self.height, self.width)\n",
+    "        else: return self._shape\n",
+    "        \n",
     "    @property\n",
     "    def times(self):\n",
     "        \"Property that computes the date_range for the region.\"\n",
@@ -180,14 +189,17 @@
     "    image_collection = ee.ImageCollection([ee.Image(image_collection.get(i)) for i in range(n)])\n",
     "    return image_collection\n",
     "\n",
-    "def download_topography_data(R:RegionST, path_save=Path('.'), scale=10):\n",
+    "def download_topography_data(R:RegionST, path_save=Path('.'), scale=None, \n",
+    "                             download_crop_size=1000, show_progress=False):\n",
+    "    if scale is None: scale = R.scale_meters\n",
     "    ee.Initialize()\n",
     "    image = ee.Image('srtm90_v4')\n",
     "    path_save.mkdir(exist_ok=True, parents=True)\n",
-    "    sR = [R] if R.shape[0] <= 64 else split_region(R, size=64)\n",
+    "    sR = [R] if min(R.shape) <= download_crop_size else split_region(R, size=download_crop_size)\n",
     "    if not (path_save/'srtm90_v4.elevation.tif').is_file():\n",
     "        files = []\n",
-    "        for j, R in enumerate(sR):\n",
+    "        loop = enumerate(sR) if not show_progress else progress_bar(enumerate(sR),total=len(sR))\n",
+    "        for j, R in loop:\n",
     "            region = (f\"[[{R.bbox.left}, {R.bbox.bottom}], [{R.bbox.right}, {R.bbox.bottom}], \" +\n",
     "              f\"[{R.bbox.right}, {R.bbox.top}], [{R.bbox.left}, {R.bbox.top}]]\")\n",
     "            url = image.getDownloadUrl(\n",
@@ -203,17 +215,19 @@
     "            os.remove(str(path_save/'data.zip'))\n",
     "        merge_tifs(files, 'srtm90_v4.elevation.tif', delete=True)\n",
     "\n",
-    "def download_data(R:RegionST, times, products, bands, path_save, scale=10, max_cloud_fraction=None,\n",
-    "                  use_least_cloudy=None):\n",
+    "def download_data(R:RegionST, times, products, bands, path_save, scale=None, max_cloud_fraction=None,\n",
+    "                  use_least_cloudy=None, download_crop_size=1000, show_progress=False):\n",
+    "    if scale is None: scale = R.scale_meters\n",
     "    ee.Initialize()\n",
     "    path_save.mkdir(exist_ok=True, parents=True)\n",
     "    if not ((path_save/f'download.{bands[0]}.tif').is_file() and \n",
     "           (path_save/f'download.{bands[1]}.tif').is_file() and\n",
     "           (path_save/f'download.{bands[2]}.tif').is_file()):\n",
-    "        sR = [R] if R.shape[0] <= 32 else split_region(R, size=32, cls=RegionST)\n",
+    "        sR = [R] if min(R.shape) <= download_crop_size else split_region(R, size=download_crop_size, cls=RegionST)\n",
     "        fsaves = []\n",
     "        #for j, R in tqdm(enumerate(sR), total=len(sR)):\n",
-    "        for j, R in enumerate(sR):\n",
+    "        loop = enumerate(sR) if not show_progress else progress_bar(enumerate(sR),total=len(sR))\n",
+    "        for j, R in loop:\n",
     "            region = (f\"[[{R.bbox.left}, {R.bbox.bottom}], [{R.bbox.right}, {R.bbox.bottom}], \" +\n",
     "                       f\"[{R.bbox.right}, {R.bbox.top}], [{R.bbox.left}, {R.bbox.top}]]\")\n",
     "\n",
@@ -307,12 +321,15 @@
     "            fsave = '_'.join(fs[0].stem.split('_')[:-1]) + suffix\n",
     "            merge_tifs(fs, fsave, delete=True)\n",
     "            \n",
-    "def download_data_ts(R:RegionST, products, bands, path_save, scale=10):\n",
+    "def download_data_ts(R:RegionST, products, bands, path_save, scale=None, \n",
+    "                     download_crop_size=1000, show_progress=False):\n",
+    "    if scale is None: scale = R.scale_meters\n",
     "    ee.Initialize()\n",
     "    times = (R.times[0], R.times[-1])\n",
     "    path_save.mkdir(exist_ok=True, parents=True)\n",
-    "    sR = [R] if R.shape[0] <= 32 else split_region(R, size=32, cls=RegionST)\n",
-    "    for j, R in enumerate(sR):\n",
+    "    sR = [R] if min(R.shape) <= download_crop_size else split_region(R, size=download_crop_size, cls=RegionST)\n",
+    "    loop = enumerate(sR) if not show_progress else progress_bar(enumerate(sR),total=len(sR))\n",
+    "    for j, R in loop:\n",
     "        region = (f\"[[{R.bbox.left}, {R.bbox.bottom}], [{R.bbox.right}, {R.bbox.bottom}], \" +\n",
     "                   f\"[{R.bbox.right}, {R.bbox.top}], [{R.bbox.left}, {R.bbox.top}]]\")\n",
     "\n",
@@ -444,7 +461,7 @@
     "    time_end   = pd.Timestamp(f'{year}-01-01') + pd.Timedelta(days=doy_end-1)\n",
     "    print('Event time_start:', str(time_start))\n",
     "    print('Event time_end:', str(time_end))\n",
-    "    R = RegionST(event_id, list(rst_ba100.bounds), rst_ba100.transform[0], \n",
+    "    R = RegionST(event_id, list(rst_ba100.bounds), scale_meters=scale, \n",
     "                 time_start=time_start, time_end=time_end, time_margin=1)\n",
     "    before = (R.times[0]-pd.Timedelta(days=composite_days[0]), R.times[0])\n",
     "    after  = (R.times[-1], R.times[-1]+pd.Timedelta(days=composite_days[1]))\n",
@@ -520,8 +537,8 @@
      "text": [
       "Converted 01_data.ipynb.\n",
       "Converted 02_models.ipynb.\n",
-      "Converted 04_predict.ipynb.\n",
-      "Converted 05_cli.ipynb.\n",
+      "Converted 03_predict.ipynb.\n",
+      "Converted 04_cli.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
