fix model weights auto-download + minor fixes

--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -36,6 +36,7 @@
    "source": [
     "#export\n",
     "import os, sys\n",
+    "import requests\n",
     "from fastai.vision.all import *\n",
     "import FireHR"
    ]
@@ -141,7 +142,45 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "_WEIGHTS = sys.modules[FireHR.__name__].__path__[0] + '/data/model512.pth'\n",
+    "def download_model_weights(weight_file='model512.pth'):\n",
+    "    \"\"\"Download model weights if they don't exist yet on ~/.firehr.\"\"\"\n",
+    "    path_save = Path(os.path.expandvars('$HOME'))/'.firehr'\n",
+    "    path_save.mkdir(exist_ok=True)\n",
+    "    file_save = path_save/weight_file\n",
+    "    if not file_save.is_file():\n",
+    "        print(f'Downloading model weights {weight_file}.')\n",
+    "        url = 'https://github.com/mnpinto/FireHR_weights/raw/main/model512.pth'\n",
+    "        file = requests.get(url)\n",
+    "        open(str(file_save), 'wb').write(file.content)\n",
+    "    else:\n",
+    "        print(f'Using local model weights {file_save}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using local model weights /home/mnpinto/.firehr/model512.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "download_model_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "_WEIGHTS = Path(os.path.expandvars('$HOME'))/'.firehr/model512.pth'\n",
     "def load_pretrained_model(weights=_WEIGHTS, ni=6, nc=1, half_precision=True, gpu=True):\n",
     "    model = FireHR(ni,nc)\n",
     "    st = torch.load(weights, map_location=torch.device('cpu'))\n",
@@ -198,13 +237,6 @@
     "#hide\n",
     "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
