fix model weights download

--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -182,6 +182,7 @@
     "#export\n",
     "_WEIGHTS = Path(os.path.expandvars('$HOME'))/'.firehr/model512.pth'\n",
     "def load_pretrained_model(weights=_WEIGHTS, ni=6, nc=1, half_precision=True, gpu=True):\n",
+    "    download_model_weights()\n",
     "    model = FireHR(ni,nc)\n",
     "    st = torch.load(weights, map_location=torch.device('cpu'))\n",
     "    model.load_state_dict(st['model'])\n",
@@ -199,6 +200,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using local model weights /home/mnpinto/.firehr/model512.pth\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
